-- Add an option to close all opened volumes with a single click.
-- Created volumes with extX file systems now use 1% reserved space instead of the default 5%.
-- Encrypted files can now be created using "/dev/random","/dev/urandom" or "/dev/zero"
-- Add a UI option to select a random number generator to use to all dialogs that deals with features that need it.
-- Add option to just minimize or minimize to tray the main window.
-- various other UI and functionality fixes.

version 4.3.1
-- A bit more UI effects when opening and closing of volumes.
-- Context menu on opened volumes can now be triggered with CTRL+M or or menu key for better keyboard only management of the tool
-- Device addresses can be given in a form of "/dev/XYZN" or "UUID=bla-bla-bla".
-- various fixes
-- A separate window to manage favorite volumes

version 4.3.2
-- ext3/ext4 can not be mounted with user specified permissions and they use the permissions set when the volume was last mounted.
    This creates a problem on freshly created volumes because they always end up owned by root. This update fix the problem by setting
    permissions everytime a volume is opened in read/write mode. If a volume open with root as owner, then reopen the volume in read/write
    mode and permissions will be set properly(0700 with the owner being the user who opened the volume)
  
    
version 4.3.3
-- fix a bug that caused improper reading of key files if they were not made up of C strings.
-- fix a bug triggered when attempting to open a plain type volume using aes-cbc-plain cypher( opening plain volume in legacy mode ).

version 4.3.4
-- fix a compilation bug on some system
-- support libmount both above and below version 2.18 

version 4.3.5
-- when creating a volume, use mkfs.xxx tools installed on the system and not hard code a subset of them.
-- use ntfs-3g to mount volumes that use ntfs file system.