@@ -26,9 +26,7 @@ ADD_SUBDIRECTORY( zuluCrypt-gui )
 
 ADD_SUBDIRECTORY( test )
 	 
-install (FILES zuluCrypt-cli.1.bz2 
-DESTINATION share/man/man1
-)
+install (FILES zuluCrypt-cli.1.bz2 DESTINATION share/man/man1)
 
 # uninstall target
 configure_file(
